force-app/main/default/objects/Strain_Type_Config__mdt/Strain_Type_Config__mdt.object-meta.xml
<CustomObject>
    <label>Strain Type Config</label>
    <pluralLabel>Strain Type Configs</pluralLabel>
</CustomObject>