force-app/main/default/objects/Strain_Type_Config__mdt/fields/Indica_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Indica_Percentage__c</fullName>
    <label>Indica Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>