force-app/main/default/objects/Strain_Type_Config__mdt/fields/Sativa_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Sativa_Percentage__c</fullName>
    <label>Sativa Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>