force-app/main/default/objects/Strain_Type_Config__mdt/fields/Strain_Type__c.field-meta.xml
<CustomField>
    <fullName>Strain_Type__c</fullName>
    <label>Strain Type</label>
    <type>TextArea</type>
</CustomField>